🔧 chore(web): update biome.json includes path, enhance tailwind.config.ts with import spacing, and refactor layout.tsx and page.tsx for improved readability and consistency in button type attributes

--- a/apps/web/biome.json
+++ b/apps/web/biome.json
@@ -3,9 +3,7 @@
   "extends": "//",
   "overrides": [
     {
-      "includes": [
-        "src/apps/**/*"
-      ],
+      "includes": ["src/app/**/*"],
       "linter": {
         "rules": {
           "style": {
