🔧 chore(mobile): update various components for improved clarity and functionality, including adjustments to biome.json, tailwind.config.ts, layout.tsx, and user-related exports

--- a/apps/mobile/biome.json
+++ b/apps/mobile/biome.json
@@ -3,9 +3,7 @@
   "extends": "//",
   "overrides": [
     {
-      "includes": [
-        "src/apps/**/*"
-      ],
+      "includes": ["src/app/**/*", "**/*.d.ts"],
       "linter": {
         "rules": {
           "style": {
