--- a/packages/argon2id/biome.jsonc
+++ b/packages/argon2id/biome.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/@biomejs/biome/configuration_schema.json",
-  "extends": "//"
-  // "files": {
-  //   "ignore": ["bin/**", "pkg/**"]
-  // }
+  "extends": "//",
+  "files": {
+    "includes": ["!!bin"]
+  }
 }
